// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DeprecatedTable Component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
  />
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot for cta content alternate settings 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
    data-has-call-to-action="true"
    data-has-expandable-action="false"
    role="table"
  >
    <div
      class="mocked-styled-0 el-deprecated-table-headers-row"
      role="row"
    >
      <div
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        <svg
          class="el-icon"
          color="secondary"
          data-size="100%"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
          />
        </svg>
      </div>
    </div>
    <div
      class="mocked-styled-9 el-deprecated-table-row-container"
      role="row"
    >
      <div
        class="mocked-styled-2 el-deprecated-table-row"
      >
        <div
          class="foo-bar el-table-cta-cell"
          role="cell"
          tabindex="0"
        >
          <div
            class="mocked-styled-11 el-table-cta-icon-container"
          >
            <svg
              class="el-icon"
              color="primary"
              data-size="sm"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot for expandable content alternate settings 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
    data-has-call-to-action="false"
    data-has-expandable-action="true"
    data-num-columns-excl-action-col="0"
    role="table"
  >
    <div
      class="mocked-styled-0 el-deprecated-table-headers-row"
      role="row"
    >
      <div
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Some Content
      </div>
    </div>
    <div
      class="mocked-styled-9 el-deprecated-table-row-container"
      role="row"
    >
      <div
        class="mocked-styled-2 el-deprecated-table-row"
      >
        <div
          class="foo-bar el-table-expandable-row-trigger-cell"
          role="cell"
          tabindex="0"
        >
          <svg
            class="el-icon"
            color="inherit"
            data-size="100%"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
            />
          </svg>
        </div>
      </div>
      <div
        class="mocked-styled-12 el-table-expandable-row"
      >
        <div
          class="mocked-styled-13 el-table-expandable-container"
        >
          <p>
            I am the content that is only visible when expanded
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot with full props and cta content 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
    data-has-call-to-action="true"
    data-has-expandable-action="false"
    data-num-columns-excl-action-col="8"
    role="table"
  >
    <div
      class="mocked-styled-0 el-deprecated-table-headers-row"
      role="row"
    >
      <div
        aria-label="Property"
        class="el-span2 el-deprecated-table-header"
        role="columnheader"
      >
        Property
      </div>
      <div
        aria-label="Customer"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Customer
      </div>
      <div
        aria-label="Client A/C"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Client A/C
      </div>
      <div
        aria-label="Description"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Description
      </div>
      <div
        aria-label="Request Date"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Request Date
      </div>
      <div
        aria-label="Amount"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Amount
      </div>
      <div
        aria-label="Payment Status"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Payment Status
      </div>
      <div
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Some Action
      </div>
    </div>
    <div
      class="el-is-active el-deprecated-table-row-container"
      role="row"
    >
      <div
        class="mocked-styled-2 el-deprecated-table-row"
      >
        <div
          class="el-span2 el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <svg
            class="el-icon"
            color="primary"
            data-size="sm"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
            />
          </svg>
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Property"
          >
            Mt Ash Jacket, Brassey Road
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <svg
            class="el-icon"
            color="primary"
            data-size="sm"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8.38 8.88c0-2 1.62-3.624 3.62-3.63a3.64 3.64 0 0 1 3.63 3.63c-.003.617-.06 1.233-.17 1.84A3.58 3.58 0 0 1 12 14a3.58 3.58 0 0 1-3.46-3.28 10.5 10.5 0 0 1-.16-1.84M12 12c.91 0 1.36-.82 1.49-1.6q.134-.754.14-1.52a1.63 1.63 0 1 0-3.25 0 8.7 8.7 0 0 0 .13 1.52c.13.78.58 1.6 1.49 1.6"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M1 12C1 5.925 5.925 1 12 1a11 11 0 0 1 11 11c0 6.075-4.925 11-11 11S1 18.075 1 12m11 5c-2.75 0-4.73 1.27-5 2.49h.06a8.93 8.93 0 0 0 9.94 0c-.27-1.22-2.25-2.49-5-2.49m0-2c3.07 0 5.62 1.28 6.55 3.12h.03a9 9 0 1 0-13.16 0C6.38 16.28 8.93 15 12 15"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Customer"
          >
            Mr Johnny Corrigan
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Alternate Lettings Client Acc
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Tenant Payment Request
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Request Date"
          >
            19 Apr 2021
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            £50.00
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Not Requested
          </div>
        </div>
        <div
          class="foo-bar el-table-cta-cell"
          role="cell"
          tabindex="0"
        >
          <div
            class="mocked-styled-11 el-table-cta-icon-container"
          >
            <svg
              class="el-icon"
              color="primary"
              data-size="sm"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot with full props and expandable content 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
    data-has-call-to-action="false"
    data-has-expandable-action="true"
    data-num-columns-excl-action-col="8"
    role="table"
  >
    <div
      class="mocked-styled-0 el-deprecated-table-headers-row"
      role="row"
    >
      <div
        aria-label="Property"
        class="el-span2 el-deprecated-table-header"
        role="columnheader"
      >
        Property
      </div>
      <div
        aria-label="Customer"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Customer
      </div>
      <div
        aria-label="Client A/C"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Client A/C
      </div>
      <div
        aria-label="Description"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Description
      </div>
      <div
        aria-label="Request Date"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Request Date
      </div>
      <div
        aria-label="Amount"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Amount
      </div>
      <div
        aria-label="Payment Status"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Payment Status
      </div>
      <div
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        <svg
          class="el-icon"
          color="secondary"
          data-size="100%"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
          />
        </svg>
      </div>
    </div>
    <div
      class="el-is-active el-deprecated-table-row-container"
      role="row"
    >
      <div
        class="mocked-styled-2 el-deprecated-table-row"
      >
        <div
          class="el-span2 el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <svg
            class="el-icon"
            color="primary"
            data-size="sm"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
            />
          </svg>
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Property"
          >
            Mt Ash Jacket, Brassey Road
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <svg
            class="el-icon"
            color="primary"
            data-size="sm"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8.38 8.88c0-2 1.62-3.624 3.62-3.63a3.64 3.64 0 0 1 3.63 3.63c-.003.617-.06 1.233-.17 1.84A3.58 3.58 0 0 1 12 14a3.58 3.58 0 0 1-3.46-3.28 10.5 10.5 0 0 1-.16-1.84M12 12c.91 0 1.36-.82 1.49-1.6q.134-.754.14-1.52a1.63 1.63 0 1 0-3.25 0 8.7 8.7 0 0 0 .13 1.52c.13.78.58 1.6 1.49 1.6"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M1 12C1 5.925 5.925 1 12 1a11 11 0 0 1 11 11c0 6.075-4.925 11-11 11S1 18.075 1 12m11 5c-2.75 0-4.73 1.27-5 2.49h.06a8.93 8.93 0 0 0 9.94 0c-.27-1.22-2.25-2.49-5-2.49m0-2c3.07 0 5.62 1.28 6.55 3.12h.03a9 9 0 1 0-13.16 0C6.38 16.28 8.93 15 12 15"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Customer"
          >
            Mr Johnny Corrigan
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Alternate Lettings Client Acc
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Tenant Payment Request
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Request Date"
          >
            19 Apr 2021
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            £50.00
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Not Requested
          </div>
        </div>
        <div
          class="mocked-styled-8 el-table-expandable-row-trigger-cell"
          role="cell"
          tabindex="0"
        >
          <svg
            class="el-icon"
            color="inherit"
            data-size="100%"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
            />
          </svg>
        </div>
      </div>
      <div
        class="el-is-active el-table-expandable-row"
      >
        <div
          class="mocked-styled-13 el-table-expandable-container"
        >
          <p>
            I am the content that is only visible when expanded
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot with varied number columns 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
  />
</DocumentFragment>
`;
